<resources>
    <string name="app_name">Home Market</string>
    <string name="action_settings">Settings</string>
    <string name="create_table_produtos_query">
         CREATE TABLE produtos (
            _id INTEGER PRIMARY KEY AUTOINCREMENT,
            title TEXT NOT NULL,
            unity TEXT NOT NULL,
            quantNow REAL NOT NULL,
            quantMonth REAL,
            monthly INTEGER NOT NULL,
            value REAL NOT NULL,
            image TEXT)
    </string>
     <string name="drop_table_produtos_query">
        DROP TABLE IF EXISTS produtos;
    </string>
    <string name="count_produtos_query" >
        SELECT COUNT(*) AS count FROM produtos;
    </string>
    <string name="list_produtos_query" >
        SELECT * FROM produtos;
    </string>
        <string name="list_despensa_query" >
        SELECT * FROM produtos WHERE quantNow > 0;
    </string>
     <string name="list_despensaprod_query" >
        SELECT * FROM produtos WHERE quantNow = 0;
    </string>
    <string name="edit_produto_quant_query">
      UPDATE produtos SET quantNow = ? WHERE _id = ?
    </string>
     <string name="insert_produtos_query">
         INSERT INTO produtos (title, unity, quantNow, quantMonth, monthly, value, image) VALUES(?,?,?,?,?,?,?)
    </string>
     <string name="edit_produtos_query">
         UPDATE produtos SET title = ?, unity = ?, quantNow = ?, quantMonth = ?, monthly = ?, value = ?, image = ? WHERE _id = ?
    </string>
     <string name="remove_produtos_query">
         DELETE FROM produtos WHERE _id = ?
    </string>
    <string name="get_product_query">
         SELECT * FROM produtos WHERE _id =
    </string>
    <string name="get_product_checked_query">
        SELECT * FROM produtos WHERE monthly = 1;
    </string>
        <string name="get_product_missing" >
        SELECT * FROM produtos WHERE monthly = 1 AND quantMonth > quantNow;
    </string>
    <string name="get_product_unchecked_query">
        SELECT * FROM produtos WHERE monthly = 0;
    </string>
        <string name="create_table_receitas_query">
         CREATE TABLE receitas (
            _id INTEGER PRIMARY KEY AUTOINCREMENT,
            title TEXT NOT NULL,
            mododefazer TEXT NOT NULL
            )
    </string>
     <string name="drop_table_receitas_query">
        DROP TABLE IF EXISTS receitas;
    </string>
    <string name="count_receitas_query" >
        SELECT COUNT(*) AS count FROM receitas;
    </string>
    <string name="list_receitas_query" >
        SELECT * FROM receitas;
    </string>
     <string name="insert_receitas_query">
         INSERT INTO receitas (title, mododefazer) VALUES(?,?)
    </string>
     <string name="edit_receitas_query">
         UPDATE receitas SET title = ?, mododefazer = ? WHERE _id = ?
    </string>
     <string name="remove_receitas_query">
         DELETE FROM receitas WHERE _id = ?
    </string>
    <string name="get_receitas_query">
         SELECT * FROM receitas WHERE _id =
    </string>
        <string name="create_table_mercados_query">
         CREATE TABLE mercados (
            _id INTEGER PRIMARY KEY AUTOINCREMENT,
            nome TEXT NOT NULL,
            email TEXT NOT NULL,
            telefone TEXT NOT NULL,
            endereco TEXT NOT NULL,
            latitude TEXT NOT NULL,
            longitude TEXT NOT NULL
            )
    </string>
     <string name="drop_table_mercados_query">
        DROP TABLE IF EXISTS mercados;
    </string>
    <string name="count_mercados_query" >
        SELECT COUNT(*) AS count FROM mercados;
    </string>
    <string name="list_mercados_query" >
        SELECT * FROM mercados;
    </string>
     <string name="insert_mercados_query">
         INSERT INTO mercados (nome, email, telefone, endereco, latitude, longitude) VALUES(?,?,?,?,?,?)
    </string>
     <string name="edit_mercados_query">
         UPDATE mercados SET nome = ?, email = ?, telefone = ?, endereco = ?, latitude = ?, longitude = ? WHERE _id = ?
    </string>
     <string name="remove_mercados_query">
         DELETE FROM mercados WHERE _id = ?
    </string>
    <string name="get_mercados_query">
         SELECT * FROM mercados WHERE _id =
    </string>
    <string name="title_activity_receitas">Receitas</string>
    <string name="receita">Receitas</string>
    <string name="title_activity_receitas_list_fragment">Lista de Receitas</string>
    <string name="title_activity_receitas_detail_fragment">Detalhes da Receita</string>
    <string name="title_activity_receita_details">Detalhes da Receita</string>
    <string name="Ingredientes">Ingredientes</string>
    <string name="ModPrep">Modo de Preparo</string>
    <string name="title_activity_receitas_insert">Inserir Receita</string>
    <string name="Receita_nome">Nome</string>
    <string name="Receita_nomebox">Digite o nome da receita</string>
    <string name="Receita_igr">Ingredientes</string>
    <string name="RemoveIng_button">-</string>
    <string name="ModPrep_edit">Digite o modo de preparo</string>
    <string name="title_activity_receitas_edit">Editar Receita</string>
    <string name="title_activity_despensa">Despensa</string>
    <string name="title_activity_despensa_list_fragment">Despensa</string>
    <string name="title_activity_despensa_detail_fragment">Despensa</string>
    <string name="produto_check">Consumo Mensal</string>
    <string name="produto_quantidade">Quantidade</string>
    <string name="produto_preço">Preço(R$)</string>
    <string name="title_activity_produto_insert">Inserir Produto</string>
    <string name="title_activity_depensa_Detail">Detalhes do Produto</string>
    <string name="title_activity_produto_detail">Detalhes do Produto</string>
    <string name="title_activity_produto_edit">Editar Produto</string>
    <string name="title_activity_mercado_main">Lista de Mercados</string>
    <string name="title_activity_mercado_list_fragment">Lista de Mercados</string>
    <string name="title_activity_mercado_details">Detalhes do Mercado</string>
    <string name="title_activity_mercado_detail_fragment">Detalhes do Mercado</string>
    <string name="MercadoEnderecoItem">Endereço do Mercado</string>
    <string name="MercadoTelefoneItem">Telefone do Mercado</string>
    <string name="MercadoEmailItem">Email do supermercado</string>
    <string name="title_activity_mercado_insert">Inserir Mercados</string>
    <string name="MercadoNome">Nome</string>
    <string name="MercadoEmail">E-mail:</string>
    <string name="MercadoTelefone">Telefone</string>
    <string name="MercadoEndereco">Endereço:</string>
    <string name="insert_status_ok">Inserido com sucesso</string>
    <string name="title_activity_mercado_edit">Editar</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Produtos</item>
        <item >Despensa</item>
        <item >Receitas</item>
        <item >Receitas Disponiveis</item>
        <item >Lista de Compras</item>
        <item >Localizar Mercados</item>
        <item >Mercados Cadastrados</item>
        <item >Historico de Lista de Compras</item>
        <item >Configurações</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="fragment_config_title">Configurações do App</string>
    <string name="title_activity_listade_compras">Lista de Compras</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storage_error">Falha ao salvar</string>
    <string name="photo_capture_success">Foto Capturada com Sucesso</string>
    <string name="image_pick_abort">Cancelado</string>
    <string name="photo_capture_error">Erro ao carregar</string>
    <string name="photo_capture_abort">Erro ao tirar foto</string>
    <string name="Ing_remove_button">-</string>
    <string name="create_table_ingredientes_query">
    CREATE TABLE ingredientes (
    _id INTEGER PRIMARY KEY AUTOINCREMENT,
    title TEXT NOT NULL,
    unity TEXT NOT NULL,
    quantidade REAL NOT NULL,
    receita_id INTEGER NOT NULL )
    </string>
    <string name="insert_ingredientes_query">
        INSERT INTO ingredientes (title, unity, quantidade, receita_id) VALUES(?,?,?,?)
    </string>
    <string name="remove_ingredientes_query">
        DELETE FROM ingredientes WHERE _id = ?
    </string>
    <string name="count_ingredientes_query">
        SELECT COUNT(*) AS count FROM ingredientes;
    </string>
    <string name="list_ingredientes_query">
        SELECT * FROM ingredientes;
    </string>
    <string name="list_receta_ingredientes_query">
        SELECT * FROM ingredientes WHERE receita_id =
    </string>
    <string name="drop_table_ingredientes_query">
        DROP TABLE IF EXISTS ingredientes;
    </string>
    <string name="get_ingredientes_query">
        SELECT * FROM ingredientes WHERE _id = ?
    </string>
    <string name="ing_add">Adicionar</string>
    <string name="cancel">Cancelar</string>
    <string name="Ingr_add">Adicionar Ingredientes</string>
    <string name="create_table_listacompras_query">
    CREATE TABLE listacompras (
    _id INTEGER PRIMARY KEY AUTOINCREMENT,
    data TEXT NOT NULL,
    value REAL NOT NULL)
    </string>
    <string name="create_table_listacompras_produtos_query">
    CREATE TABLE listacompras_produtos (
    _id INTEGER PRIMARY KEY AUTOINCREMENT,
    name TEXT NOT NULL,
    quantidade REAL NOT NULL,
    value REAL NOT NULL,
    lista_id INTEGER NOT NULL,
    unidade TEXT NOT NULL)
    </string>
    <string name="insert_listacompras_query">
        INSERT INTO listacompras (data, value) VALUES(?,?)
    </string>
    <string name="select_listacompras_first_query">
        SELECT * FROM listacompras WHERE _id = 1
    </string>
    <string name="get_listacompras_max_query">
        SELECT * FROM listacompras ORDER BY _id DESC LIMIT 1
    </string>
    <string name="remove_listacompras_query">
        DELETE FROM listacompras WHERE _id = ?
    </string>
    <string name="count_listacompras_query">
        SELECT COUNT(*) AS count FROM listacompras
    </string>
    <string name="list_listacompras_query">
        SELECT * FROM listacompras
    </string>
    <string name="drop_table_listacompras_query">
        DROP TABLE IF EXISTS listacompras
    </string>
    <string name="get_listacompras_query">
        SELECT * FROM listacompras WHERE _id = ?
    </string>
    <string name="insert_listacompras_produtos_query">
        INSERT INTO listacompras_produtos(name, quantidade, value, lista_id, unidade) VALUES(?,?,?,?,?)
    </string>
    <string name="remove_listacompras_produtos_query">
        DELETE FROM listacompras_produtos WHERE _id = ?
    </string>
    <string name="count_listacompras_produtos_query">
        SELECT COUNT (*) AS count FROM listacompras_produtos
    </string>
    <string name="list_listacompras_produtos_query">
        SELECT * FROM listacompras_produtos
    </string>
    <string name="dropb_table_listacompras_produtos_query">
        DROP TABLE IF EXISTS listacompras_produtos
    </string>
    <string name="get_listacompras_produtos_query">
        SELECT * FROM listacompras_produtos WHERE _id = ?
    </string>
    <string name="get_listacompras_produtos_max_query">
        SELECT * FROM listacompras_produtos WHERE MAX(lista_id);
    </string>
    <string name="edit_listacompras_produtos_quant_query">
        UPDATE listacompras_produtos SET quantidade = ? , value = ? WHERE _id = ?
    </string>
    <string name="edit_listacompras_preco_query">
        UPDATE listacompras SET data = ?, value = ? WHERE _id = ?
    </string>
    <string-array name="unitis_array">
        <item>Kilogramas</item>
        <item>Gramas</item>
        <item>Litros</item>
        <item>Mililitros</item>
        <item>Unidades</item>
    </string-array>
    <string name="title_activity_despensa_detail">Detalhes da Despensa</string>
</resources>