<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TextView android:id="@+id/mercado_item_nome"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <TableRow>
        <TextView android:text="@string/MercadoEmailItem"
            android:textStyle="bold"/>
        <TextView android:id="@+id/mercado_item_email" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/MercadoTelefoneItem"
            android:textStyle="bold"/>
        <TextView android:id="@+id/mercado_item_telefone"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/MercadoEnderecoItem"
            android:textStyle="bold"/>
        <TextView android:id="@+id/mercado_item_endereco"/>
    </TableRow>

</TableLayout>
