<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ufabc.kleinzanin.homemarket.ReceitasEdit"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Receita_nome"
        android:textSize="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Nome_editText"
        android:hint="@string/Receita_nomebox"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/insert_ingrediente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Receita_igr"
            android:textSize="20dp"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/Add_button"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:background="@android:drawable/ic_menu_add" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/ingredientes_list"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ModPrep"
        android:textSize="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Mod_prepedit"
        android:hint="@string/ModPrep_edit"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ReceitaInsert_button"
        android:text="Editar"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
